// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--schema from parent directory --generator: should fail - multiple invalid generator names 1`] = `The generators invalid_client, invalid_client_2 specified via --generator do not exist in your Prisma schema`;

exports[`--schema from parent directory --generator: should fail - single invalid generator name 1`] = `The generator invalid_client specified via --generator does not exist in your Prisma schema`;

exports[`--schema from parent directory --generator: should work - valid generator names 1`] = `

✔ Generated Prisma Client (0.0.0 | TEST_ENGINE_TYPE) to ./generated/client in XXXms

✔ Generated Prisma Client (0.0.0 | TEST_ENGINE_TYPE) to ./generated/client_3 in XXXms
Start using Prisma Client in Node.js (See: https://pris.ly/d/client)
\`\`\`
import { PrismaClient } from './generated/client'
const prisma = new PrismaClient()
\`\`\`
or start using Prisma Client at the edge (See: https://pris.ly/d/accelerate)
\`\`\`
import { PrismaClient } from './generated/client/edge'
const prisma = new PrismaClient()
\`\`\`

See other ways of importing Prisma Client: http://pris.ly/d/importing-client

`;

exports[`using cli should work with a custom output dir 1`] = `
Prisma schema loaded from prisma/schema.prisma

✔ Generated Prisma Client (0.0.0 | TEST_ENGINE_TYPE) to ./generated/client in XXXms
Start using Prisma Client in Node.js (See: https://pris.ly/d/client)
\`\`\`
import { PrismaClient } from './generated/client'
const prisma = new PrismaClient()
\`\`\`
or start using Prisma Client at the edge (See: https://pris.ly/d/accelerate)
\`\`\`
import { PrismaClient } from './generated/client/edge'
const prisma = new PrismaClient()
\`\`\`

See other ways of importing Prisma Client: http://pris.ly/d/importing-client

`;

exports[`using cli should work with a custom output dir 2`] = `
[
  {
    email: bob@bob.bob,
    id: 1,
    name: Bobby Brown Sqlite,
  },
]
`;
